crates/ui/tests/snapshots/panel_snapshots__baseline_screen__baseline_snapshot__error_light.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "baseline_summary(&c, ThemeMode::Light)"
---
screen: baseline
theme: Light
headline: Passive baseline
caption: Equal-weight buy-and-hold across 10 large-cap pairs, bought once at year-open and never rebalanced. Passive baseline; active ≤ passive in the reachable universe, this sample.
year_chips:
  [2023] inactive color=fg_muted
  [2024] active color=accent(light) bg=panel_raised
kpi_strip:
  total_return: 91.04% color=pos
  cagr: 91.04%
  sharpe: 0.8925
  max_dd: −48.95% color=neg
  win_rate: —
  trades: 0
curve+band:
  state: error body=Equity curve unavailable: Baseline equity data isn't bundled in this build. The realized buy-and-hold curves live at docs/runbooks/artifacts/passive-baseline-2026-06-08/.
risk_detail: Sortino 2.51 / Calmar 5.68 (2023)  ·  Sortino 1.20 / Calmar 1.85 (2024)
