crates/ui/tests/snapshots/panel_snapshots__baseline_screen__baseline_snapshot__ready_2024_light.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "baseline_summary(&c, ThemeMode::Light)"
---
screen: baseline
theme: Light
headline: Passive baseline
caption: Equal-weight buy-and-hold across 10 large-cap pairs, bought once at year-open and never rebalanced. Gross of costs — no fees, no slippage, no funding — so a tradeable buy-and-hold would have kept less. Passive baseline; active ≤ passive in the reachable universe, this sample.
year_chips:
  [2023] inactive color=fg_muted
  [2024] active color=accent(light) bg=panel_raised
kpi_strip:
  total_return: 91.04% color=pos
  cagr: 91.04%
  sharpe: 0.8925
  max_dd: −48.95% color=neg
  win_rate: —
  trades: 0
sharpe_note: Sharpe 0.89 is the realized single-path figure for 2024 — the one actual price sequence this curve draws. The published passive bar is the bootstrap median (p50) 1.10 over 200 block-resampled paths.
curve+band:
  state: ready points=367
  peak: 243941.06 trough: 86207.37 max_dd_frac: 0.4181760895317619239925250905
  band_axis_max_pct: 41.82
  curve_line=ACCENT curve_fill=UP_500
  band_line=DOWN_500 band_fill=DOWN_500
sampling_note: Cards are hourly-resolution metrics; the curve and band are drawn from the daily-sampled CSV (367 rows), which misses intraday extremes — its deepest visible drawdown is 41.82% against the card's 48.95%.
risk_detail: Sortino 1.20 / Calmar 1.85 (2024)
